Fix overflow and wrapping of display posts images on narrow screens (fixes #133)

--- a/src/sass/partials/_displayposts.scss
+++ b/src/sass/partials/_displayposts.scss
@@ -27,7 +27,8 @@ ul.display-posts-listing {
         }
         
         img {
-            float: left;
+			max-width: 100%;
+			height: auto;
             margin-right: 2rem;
             margin-bottom: .5rem;
         }
@@ -84,3 +85,9 @@ ul.display-posts-listing {
     } // li.listing-item
     
 } // ul.display-posts-listing
+
+@media all and (min-width: 600px) {
+	ul.display-posts-listing li.listing-item img {
+		float: left;
+	}
+}
